--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "axios": "^1.7.4",
     "framer-motion": "^10.16.4",
+    "ionicons": "^8.0.8",
     "mapbox-gl": "^2.15.0",
     "next": "14.2.10",
     "nextjs-toploader": "^1.6.4",
@@ -26,8 +27,8 @@
     "reactstrap": "^9.2.1"
   },
   "devDependencies": {
-    "@types/mapbox-gl": "^2.7.18",
     "@types/mapbox__mapbox-gl-geocoder": "^4.7.7",
+    "@types/mapbox-gl": "^2.7.18",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
