Committing all current changes before push

--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@ionic/react": "^7.5.0",
     "@mapbox/mapbox-gl-directions": "^4.1.1",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "@types/mongoose": "^5.11.96",
     "axios": "^1.7.4",
+    "bcryptjs": "^3.0.2",
     "framer-motion": "^10.16.4",
     "ionicons": "^8.0.8",
     "mapbox-gl": "^2.15.0",
+    "mongoose": "^8.15.0",
     "next": "14.2.10",
     "nextjs-toploader": "^1.6.4",
     "react": "^18",
@@ -33,6 +36,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "cypress": "^14.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
